# dioxus

./: .gitignore  README.md
blog/: Cargo.toml  package.json
blog/assets/: main.css
blog/src/: component.rs  lib.rs  main.rs  model.rs  route.rs
blog/src/component/: loading.rs  post.rs
blog/src/model/: post.rs  user.rs
burn-after-reading/burn-after-reading/: Cargo.toml  burn-after-reading.sql  frontend-api.http
burn-after-reading/burn-after-reading-ui/: Cargo.toml  Dioxus.toml  input.css  package.json
burn-after-reading/burn-after-reading-ui/assets/: main.css
burn-after-reading/burn-after-reading-ui/src/: api.rs  http.rs  lib.rs  main.rs  model.rs  router.rs
burn-after-reading/burn-after-reading-ui/src/components/: mod.rs  not_found.rs
burn-after-reading/burn-after-reading-ui/src/components/frontend/: message.rs
burn-after-reading/burn-after-reading/src/: config.rs  err.rs  frontend.rs  lib.rs  main.rs  model.rs  resp.rs  util.rs
burn-after-reading/burn-after-reading/src/db/: message.rs
burn-after-reading/burn-after-reading/src/form/: message.rs
calc/: Cargo.toml  Dioxus.toml
calc/assets/: main.css
calc/src/: components.rs  main.rs
dx-ssr/: Cargo.toml
dx-ssr/src/: err.rs  handler.rs  lib.rs  main.rs
file-upload/file-upload/: Cargo.toml
file-upload/file-upload-ui/: Cargo.toml  Dioxus.toml
file-upload/file-upload-ui/src/: main.rs
file-upload/file-upload/src/: main.rs
