[package]
name = "blog"
version = "0.1.0"
authors = ["axumrs <team@axum.eu.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AxumCourse/dioxus"
homepage = "https://axum.eu.org/subject/dioxus"
description = "AXUM中文网专题：使用 axum 和 dioxus 构建全栈 Web 应用"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
