[package]
name = "burn-after-reading"
version = "0.1.0"
authors = ["axumrs <team@axum.eu.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AxumCourse/dioxus"
homepage = "https://axum.eu.org/subject/dioxus"
description = "AXUM中文网专题：使用 axum 和 dioxus 构建全栈 Web 应用"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
xid = "1.1.1"
